force-app/main/default/objects/Semaforo__c/Semaforo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Semáforo</label>
</CustomObject>