force-app/main/default/objects/Semaforo__c/fields/Semaforo_Amarillo__c.field-meta.xml
<CustomField>
    <fullName>Semaforo_Amarillo__c</fullName>
    <label>Semáforo Amarillo</label>
    <type>Url</type>
</CustomField>