force-app/main/default/objects/Semaforo__c/fields/Semaforo_rojo__c.field-meta.xml
<CustomField>
    <fullName>Semaforo_rojo__c</fullName>
    <label>Semáforo rojo</label>
    <type>Url</type>
</CustomField>