force-app/main/default/objects/Semaforo__c/fields/Semaforo_Verde__c.field-meta.xml
<CustomField>
    <fullName>Semaforo_Verde__c</fullName>
    <label>Semáforo Verde</label>
    <type>Url</type>
</CustomField>